--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 
 body {
   line-height: 1.4;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Nunito', sans-serif;
   color: #67696c;
   font-size: 16px;
   font-weight: 300;
@@ -34,7 +34,7 @@ table {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Nunito', sans-serif;
   font-weight: 600;
 }
 
@@ -123,7 +123,7 @@ HEADER
 }
 
 .bg-color {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(255, 255, 255, 0.354);
   min-height: 650px;
 }
 
@@ -138,7 +138,7 @@ HEADER
 
 @media (max-width: 768px) {
 	.navbar-collapse {
-		background: rgba(64, 75, 97, 0.9);
+		background: rgb(0, 0, 0);
     border-top: 0;
 	}
 }
@@ -148,7 +148,7 @@ HEADER
 
 .top-nav-collapse {
   padding: 0;
-  background: rgba(64, 75, 97, 0.9);
+  background: rgba(0, 0, 0, 0.9);
 }
 
 .logo-dec {
@@ -157,7 +157,7 @@ HEADER
 
 .navbar-default .navbar-brand {
   color: #fff;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Nunito', sans-serif;
   font-weight: 700;
 }
 
@@ -186,13 +186,13 @@ HEADER
 }
 
 .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
-  color: #1a1f28;
+  color: #818eb3;
   background-color: transparent;
 }
 
 .navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>li>a:hover {
   background-color: transparent;
-  color: #1a1f28;
+  color: #008562;
 }
 
 .banner-info {
@@ -201,7 +201,7 @@ HEADER
 }
 
 .bnr-title, .bnr-sub-title {
-  font-family: 'Fira Sans', sans-serif;
+  font-family: 'Nunito', sans-serif;
 }
 
 h1.bnr-title {
@@ -268,7 +268,7 @@ features
 ***********************************/
 
 .title, .service-title {
-  font-family: 'Fira Sans', sans-serif;
+  font-family: 'Nunito', sans-serif;
   font-size: 35px;
   text-transform: uppercase;
 }
@@ -429,7 +429,7 @@ ul.service-list li i {
 }
 
 .portfolio-item figure h2 {
-  font-family: 'Fira Sans', sans-serif;
+  font-family: 'Nunito', sans-serif;
   color: #fff;
   font-size: 20px;
   text-align: left;
@@ -542,7 +542,7 @@ TESTIMONIAL
   position: absolute;
   font-weight: 300;
   font-size: 3em;
-  font-family: Georgia, serif;
+  font-family: 'Nunito', sans-serif;
   color: #ccc;
   top: 62%;
 }
@@ -852,4 +852,51 @@ Responsive media queries
     line-height: 22px;
     text-align: center;
   }
+}
+
+/*General Styling*/
+.img-scale{
+  
+}
+
+.btn {
+  flex: 1 1 auto;
+  margin: 10px;
+  padding: 15px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+ /* text-shadow: 0px 0px 10px rgba(0,0,0,0.2);*/
+  box-shadow: 0 0 20px #eee;
+  border-radius: 10px;
+ }
+
+/* Demo Stuff End -> */
+
+/* <- Magic Stuff Start */
+
+.btn:hover {
+  background-position: right center; /* change the direction of the change here */
+}
+
+.btn-1 {
+  background-image: linear-gradient(to right, #f6d365 0%, #fda085 51%, #f6d365 100%);
+}
+
+.btn-2 {
+  background-image: linear-gradient(to right, #fbc2eb 0%, #a6c1ee 51%, #fbc2eb 100%);
+}
+
+.btn-3 {
+  background-image: linear-gradient(to right, #84fab0 0%, #8fd3f4 51%, #84fab0 100%);
+}
+
+.btn-4 {
+  background-image: linear-gradient(to right, #a1c4fd 0%, #c2e9fb 51%, #a1c4fd 100%);
+}
+
+.btn-5 {
+  background-image: linear-gradient(to right, #ffecd2 0%, #fcb69f 51%, #ffecd2 100%);
 }
