--- a/css/about.css
+++ b/css/about.css
@@ -8,7 +8,7 @@ body {
     overflow-x: hidden;
   }
 .header {
-    background-image: linear-gradient(to right, #ffecd2 0%, #fcb69f 51%, #ffecd2 100%);
+  background: url('../img/abstract-2jpg.jpg') no-repeat fixed;
     background-size: cover;
     min-height: 650px;
     position: relative;
