--- a/css/services.css
+++ b/css/services.css
@@ -8,9 +8,9 @@ body {
   overflow-x: hidden;
 }
 .header {
-  background-image: linear-gradient(to right, #ffffff 0%, #dfdfdf 51%, #ececec 100%);
+  background: url('../img/abstract-2jpg.jpg') no-repeat fixed;
   background-size: cover;
-  min-height: 650px;
+  
   position: relative;
 }
 
@@ -18,7 +18,9 @@ body {
   background-color: rgba(255, 255, 255, 0.354);
   min-height: 650px;
 }
-
+.lead{
+  font-size: 16px;
+}
 
 
 .navbar-default {
