--- a/css/style.css
+++ b/css/style.css
@@ -111,10 +111,11 @@ HEADER
 ***********************************/
 
 .header {
-  background: url('../img/bg-banner02.jpg') no-repeat fixed;
+  background: url('../img/abstract-2jpg.jpg') no-repeat fixed;
   background-size: cover;
   min-height: 650px;
   position: relative;
+  color: #1a1f28;
 }
 
 .bg-color {
@@ -192,7 +193,7 @@ HEADER
 
 .banner-info {
   padding-top: 140px;
-  color: #fff;
+  color:black;
 }
 
 .bnr-title, .bnr-sub-title {
@@ -621,8 +622,8 @@ contact
 ***********************************/
 
 #contact {
-  background-image: linear-gradient(to right, #a1c4fd 0%, #c2e9fb 51%, #a1c4fd 100%);
-}
+  background: rgb(212,207,207);
+  background: radial-gradient(circle, rgba(212,207,207,1) 0%, rgba(249,248,248,1) 100%, rgba(255,255,255,1) 100%);}
 
 .btn-submit, .btn-submit:hover, .btn-submit:focus {
   background-color: transparent;
@@ -858,6 +859,7 @@ Responsive media queries
   text-align: center;
   text-transform: uppercase;
   transition: 0.5s;
+  background-color: #777777;
   background-size: 200% auto;
   color: white;
  /* text-shadow: 0px 0px 10px rgba(0,0,0,0.2);*/
@@ -869,9 +871,7 @@ Responsive media queries
 
 /* <- Magic Stuff Start */
 
-.btn:hover {
-  background-position: right center; /* change the direction of the change here */
-}
+
 
 .btn-1 {
   background-image: linear-gradient(to right, #f6d365 0%, #fda085 51%, #f6d365 100%);
