--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ HEADER
 ***********************************/
 
 .header {
-  background: url('../img/abstract-2jpg.jpg') no-repeat fixed;
+  background: url('../img/back3.jpg') no-repeat fixed;
   background-size: cover;
   min-height: 650px;
   position: relative;
@@ -119,7 +119,7 @@ HEADER
 }
 
 .bg-color {
-  background-color: rgba(255, 255, 255, 0.354);
+  
   min-height: 650px;
 }
 
@@ -193,7 +193,7 @@ HEADER
 
 .banner-info {
   padding-top: 140px;
-  color:black;
+  color:rgb(255, 255, 255);
 }
 
 .bnr-title, .bnr-sub-title {
@@ -256,7 +256,26 @@ h2.bnr-sub-title {
   font-size: 38px;
   color: #fff;
 }
+/***********************************
+************************************
+Projects Section
+************************************
+***********************************/
+#feature{
+  background-image: linear-gradient(to right, #fbc2eb 0%, #a6c1ee 51%, #fbc2eb 100%);
+}
 
+.projects:hover{
+  cursor: pointer;
+  transition-duration: 1s;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  background-image: linear-gradient(to right, #fbc2eb 0%, #a6c1ee 51%, #fbc2eb 100%);
+  
+}
+
+.projects{
+  border-radius:20px;
+}
 /***********************************
 ************************************
 features
