--- a/css/services.css
+++ b/css/services.css
@@ -1,6 +1,6 @@
 body {
   line-height: 1.4;
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   color: #67696c;
   font-size: 16px;
   font-weight: 300;
@@ -51,7 +51,7 @@ body {
 
 .navbar-default .navbar-brand {
   color: #fff;
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-weight: 700;
 }
 
@@ -95,7 +95,7 @@ body {
 }
 
 .bnr-title, .bnr-sub-title {
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 h1.bnr-title {
