--- a/css/projects.css
+++ b/css/projects.css
@@ -22,6 +22,16 @@ body {
   font-size: 16px;
 }
 
+.downArrow{
+
+	bottom: 45%;
+	left: 50%;
+}
+.bounce {
+	-moz-animation: bounce 3s infinite;
+	-webkit-animation: bounce 3s infinite;
+	animation: bounce 3s infinite;
+}
 
 .navbar-default {
   background-color: transparent;
