projects index services about page image refinements and link fixes

--- a/components/footer.html
+++ b/components/footer.html
@@ -165,9 +165,21 @@
             <div class="col social">
                 <h1>Social</h1>
                 <ul>
-                    <li><img src="https://svgshare.com/i/5fq.svg" width="32" style="width: 32px;"></li>
-                    <li><img src="https://svgshare.com/i/5eA.svg" width="32" style="width: 32px;"></li>
-                    <li><img src="https://svgshare.com/i/5f_.svg" width="32" style="width: 32px;"></li>
+                    <li><a class="fb-ic mr-3" style="color:#ffffff;"
+                        href="https://www.facebook.com/GabsCreativeCapital/" role="button"><i
+                            class="fab fa-lg fa-facebook-f fa-2x"></i></a></li>
+                    <!--Twitter-->
+                    <li><a class="tw-ic mr-3" style="color:#ffffff;" href="https://twitter.com/Sadc2022"
+                        role="button"><i class="fab fa-lg fa-twitter fa-2x"></i></a></li>
+                    <!--Instagram-->
+                    
+                   <li> <a class="ins-ic mr-3" style="color:#ffffff;"
+                        href="https://www.instagram.com/gabs_creative_capital/" role="button"><i
+                            class="fab fa-lg fa-instagram fa-2x"></i></a></li>
+                    <!--Youtube-->
+                   <li> <a class="yt-ic mr-3" style="color:#ffffff;" role="button"><i
+                            class="fab fa-lg fa-youtube fa-2x"></i></a></li>
+                 
                 </ul>
             </div>
             <div class="clearfix"></div>
