--- a/css/services.css
+++ b/css/services.css
@@ -9,7 +9,7 @@ body {
 }
 .header {
  
-  background: url('../img/back2.jpg') no-repeat fixed;
+  background: url('../img/back2b.jpg') no-repeat fixed;
  
   background-size: cover;
   min-height: 650px;
@@ -17,7 +17,7 @@ body {
 }
 
 .bg-color {
-  
+  background-color: rgba(255, 255, 255, 0.612);
   min-height: 650px;
 }
 
@@ -83,13 +83,14 @@ body {
   font-weight: 400;
   text-transform: uppercase;
   background: transparent;
-  color: rgb(255, 255, 255);
+  color: rgb(96, 96, 96);
   -webkit-transition: color 0.2s ease-out;
   transition: color 0.2s ease-out;
 }
 
 .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
-  color: #8e9bbd;
+  color: #000000;
+  font-weight: bold;
   background-color: transparent;
 }
 
